# deps-zed

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  extension.toml
.github/workflows/: ci.yml
src/: lib.rs
