[package]
name = "deps-zed"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
authors = ["Andrei G <k05h31@gmail.com>"]
license = "MIT"
repository = "https://github.com/bug-ops/deps-zed"
description = "Zed editor extension for deps-lsp"

[lib]
crate-type = ["cdylib"]

[dependencies]
zed_extension_api = "0.7"
